--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ build-job:
     stage: build
     before_script: 
         - apt update
-        - apt install build-essential
+        - apt install -y build-essential
         - cd green_tyler.assignement-1.02
     script:
+        - make clean
         - make
