add prod target for make

--- a/green_tyler.assignment-1.02/Makefile
+++ b/green_tyler.assignment-1.02/Makefile
@@ -1,5 +1,8 @@
 all: poke327
 
+prod: poke327.c
+	gcc -Wall -Werror poke327.c -o poke327
+
 poke327: poke327.c
 	gcc -Wall -g poke327.c -o poke327
 
