--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ build-job:
         - apt install -y build-essential
         - cd green_tyler.assignment-1.02
     script:
-        - make
+        - make prod
