--- a/green_tyler.assignment-1.06/Makefile
+++ b/green_tyler.assignment-1.06/Makefile
@@ -1,30 +1,34 @@
 all: poke327
 
-prod: poke327.c heap.c heap.h map.c map.h world.c world.h trainer.c trainer.h utility.h
-	gcc -Wall -Werror -c trainer.c -o trainer.o
-	gcc -Wall -Werror -c map.c -o map.o
-	gcc -Wall -Werror -c heap.c -o heap.o
-	gcc -Wall -Werror -c world.c -o world.o
-	gcc -Wall -Werror -c poke327.c -o poke327.o
-	gcc -Wall -Werror poke327.o map.o heap.o world.o trainer.o -o poke327 -lncurses
+prod: poke327.cpp heap.cpp heap.h map.cpp map.hpp world.cpp world.hpp trainer.cpp trainer.hpp utility.h
+	g++ -Wall -Werror -c trainer.cpp -o trainer.o
+	g++ -Wall -Werror -c map.cpp -o map.o
+	g++ -Wall -Werror -c heap.c -o heap.o
+	g++ -Wall -Werror -c world.cpp -o world.o
+	g++ -Wall -Werror -c poke327.cpp -o poke327.o
+	g++ -Wall -Werror -c player.cpp -o player.o -c
+	g++ -Wall -Werror poke327.o map.o heap.o world.o trainer.o player.o -o poke327 -lncurses
 
-poke327: poke327.o heap.o map.o world.o trainer.o
-	gcc -Wall -Werror -g poke327.o map.o heap.o world.o trainer.o -o poke327 -lncurses
+poke327: poke327.o heap.o map.o world.o trainer.o player.o
+	g++ -Wall -Werror -g poke327.o heap.o map.o world.o trainer.o player.o -o poke327 -lncurses
 
-poke327.o: poke327.c heap.h map.h
-	gcc -Wall -g poke327.c -o poke327.o -c
+poke327.o: poke327.cpp heap.h map.hpp
+	g++ -Wall -g poke327.cpp -o poke327.o -c
 
 heap.o: heap.c heap.h
 	gcc -Wall -g heap.c -o heap.o -c
 
-map.o: map.c map.h heap.h trainer.h
-	gcc -Wall -g map.c -o map.o -c
+map.o: map.cpp map.hpp heap.h trainer.hpp
+	g++ -Wall -g map.cpp -o map.o -c
 
-world.o: map.c map.h world.c world.h
-	gcc -Wall -g world.c -o world.o -c
+world.o: map.cpp map.hpp world.cpp world.hpp utility.hpp
+	g++ -Wall -g world.cpp -o world.o -c
 
-trainer.o: trainer.c trainer.h map.h
-	gcc -Wall -g trainer.c -o trainer.o -c
+trainer.o: trainer.cpp trainer.hpp map.hpp trainer.hpp
+	g++ -Wall -g trainer.cpp -o trainer.o -c
+
+player.o: player.cpp player.hpp character.hpp
+	g++ -Wall -g player.cpp -o player.o -c
 
 clean:
 	rm -f poke327 && rm -f *.o
